--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 	<%= csrf_meta_tags %>
 	<%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,300,600,700%7CRaleway:700' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" type="image/x-icon" href="/assets/smalltab.ico">
     <script src="/assets/froala_editor.min.js"></script>
     <script src="/assets/plugins/image.min.js"></script>
     <script src="/assets/modernizr-2.6.2-respond-1.1.0.min.js"></script>
