--- a/app/views/charges/create.html.erb
+++ b/app/views/charges/create.html.erb
@@ -42,7 +42,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-sm-10">
-							<span class="sub">© Copyright 2016 Building Blocks</span>
+							<span class="sub">© Copyright 2016 Slugger City Sign Co.</span>
 
 						</div>
 
