--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -124,7 +124,7 @@
         <div class="container">
           <div class="row">
             <div class="col-sm-10">
-              <span class="sub">© Copyright 2016 Building Blocks</span>
+              <span class="sub">© Copyright 2016 Slugger City Sign Co.</span>
             </div>
           </div><!--end of row-->
         </div><!--end of container-->
