--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,39 @@
-<h2>Change your password</h2>
+<div class="main-container">
+  <section class="no-pad login-page fullscreen-element">
+    <div class="background-image-holder">
+      <img class="background-image" alt="Poster Image For Mobiles" src="/assets/hero6.jpg">
+    </div>
+      
+      <div class="container align-vertical">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 text-center">
+            <h1 class="text-white">Change your password</h1>
+            <div class="photo-form-wrapper clearfix">
+            <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+              <%= devise_error_messages! %>
+              <%= f.hidden_field :reset_password_token %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+              <div class="field">
+                <%= f.label :password, "New password", class: "text-white" %><br />
+                <% if @minimum_password_length %>
+                  <em class="text-white">(<%= @minimum_password_length %> characters minimum)</em><br />
+                <% end %>
+                <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
+              </div>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %>
-  </div>
+              <div class="field">
+                <%= f.label :password_confirmation, "Confirm new password", class: "text-white" %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "off" %>
+              </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+              <div class="actions">
+                <%= f.submit "Change my password", class: "login-btn btn-filled" %>
+              </div>
+            <% end %>
 
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+            <%= render "devise/shared/links" %>
+            </div>
+      </div><!--end of row-->
+    </div><!--end of container-->
+  </section>
+</div>
