--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,29 @@
-<h2>Forgot your password?</h2>
+<div class="main-container">
+  <section class="no-pad login-page fullscreen-element">
+    <div class="background-image-holder">
+      <img class="background-image" alt="Poster Image For Mobiles" src="/assets/hero6.jpg">
+    </div>
+      
+      <div class="container align-vertical">
+        <div class="row">
+          <div class="col-md-4 col-md-offset-4 col-sm-6 col-sm-offset-3 text-center">
+            <h1 class="text-white">Forgot your password?</h1>
+            <div class="photo-form-wrapper clearfix">
+			<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+			  <%= devise_error_messages! %>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+			  <div class="field">
+			    <%= f.label :email, class: "text-white" %><br />
+			    <%= f.email_field :email, autofocus: true %>
+			  </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+			  <div class="actions">
+			    <%= f.submit "Submit", class: "login-btn btn-filled" %>
+			  </div>
+			<% end %>
+			<%= render "devise/shared/links" %>
+		 </div>
+      </div><!--end of row-->
+    </div><!--end of container-->
+  </section>
+</div>
