More devise views fixes

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -27,7 +27,7 @@
               </div>
 
               <div class="actions">
-                <%= f.submit "Change my password", class: "login-btn btn-filled" %>
+                <%= f.submit "Submit", class: "login-btn btn-filled" %>
               </div>
             <% end %>
 
