Corrected phone number and contact on posts pages

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -73,7 +73,7 @@
 						<div class="col-sm-12">
 							<span class="text-white">© 2016 Slugger City Sign Co.</span>
 							<span class="text-white"><a href="#">hello@buildingblocks.com</a></span>
-							<span class="text-white">+555 555 5555</span>
+							<span class="text-white">+502 403 8777</span>
 							<span class="text-white">Louisville KY, 40206</span>
 						</div>
 					</div><!--end for row-->
@@ -82,7 +82,7 @@
 				<div class="contact-action">
 					<div class="align-vertical">
 						<i class="icon text-white icon_mail"></i>
-						<a href="pages/contact.html" class="text-white"><span class="text-white">Get in touch with us <i class="icon arrow_right"></i></span></a>
+						<a href="/contact" class="text-white"><span class="text-white">Get in touch with us <i class="icon arrow_right"></i></span></a>
 					</div>
 				</div>
 			</footer>
