--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,10 +4,10 @@
 			<header class="fullscreen-element no-pad centered-text">
 				<div class="background-image-holder overlay">
 				<div class="background-image-holder overlay">
-					<img class="background-image overlay" alt="Poster Image For Mobiles" src="/assets/shine4-min.jpg">
+					<img class="background-image overlay" alt="Poster Image For Mobiles" src="/assets/homeimage-min.png">
 				</div>
 					<div class="video-wrapper">
-						<%= video_tag "videobg.mp4", controls: false, autoplay: true, muted: true, loop: true, poster: "homeimage-min.png", class: "video-wrapper", type: "video/mp4" %>
+						<%= video_tag "videobg.mp4", controls: false, autoplay: true, muted: true, loop: true, class: "video-wrapper", type: "video/mp4" %>
 					</div>
 				</div>				
 				<div class="container align-vertical">
