--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -94,7 +94,7 @@
 							</li>
 							
 							<li>
-								<a href="#">
+								<a href="https://www.instagram.com/_slugger_city_sign_co._/?hl=en">
 									<i class="icon social_instagram"></i>
 								</a>
 							</li>
